fixed issue with flexbox gap - used margin instead

--- a/src/components/styles/App.scss
+++ b/src/components/styles/App.scss
@@ -4,14 +4,18 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+html {
   font-family: "Montserrat", sans-serif;
+  min-width: 365px;
+  background-color: #e9e9e9;
 }
 
 .container {
   display: flex;
   justify-content: center;
   padding: 1.5rem 4rem 0 4rem;
-  background-color: #e9e9e9;
   min-height: 91.75vh;
 }
 
