--- a/src/components/styles/Watchlist.scss
+++ b/src/components/styles/Watchlist.scss
@@ -1,5 +1,6 @@
 .watchlist {
-  width: 90%;
+  max-width: 75rem;
+  width: 100%;
 
   &__title {
     color: rgb(0, 40, 76);
@@ -10,7 +11,7 @@
   &__container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
-    gap: 2rem;
+    column-gap: 2rem;
     padding: 0 0 2rem 2rem;
   }
 
@@ -20,11 +21,12 @@
     border-radius: 5px;
     background-color: white;
     box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.25);
+    margin-bottom: 3rem;
   }
 
   &__img-div {
     width: 100%;
-    height: 25rem;
+    height: 100%;
   }
 
   &__img {
@@ -34,10 +36,8 @@
     display: block;
     border-radius: 5px;
     cursor: pointer;
-    transition: transform ease 0.3s;
 
     &:hover {
-      // transform: translateY(-2px);
       border: 4px solid #2196f3;
     }
   }
@@ -48,18 +48,15 @@
     left: 0;
     right: 0;
     display: flex;
-    justify-content: center;
-    gap: 0.5rem;
-    width: 25%;
+    width: min-content;
     margin: 0 auto;
-    padding: 0.25rem;
-    margin-bottom: 0.75rem;
+    margin-bottom: 0.85rem;
     background-color: rgba(0, 0, 0, 0.75);
     border-radius: 5px;
 
     & button {
-      font-size: 1rem;
-      padding: 0.25rem;
+      font-size: 1.25rem;
+      padding: 0.5rem 0.65rem;
       border: none;
       cursor: pointer;
       color: white;
